   - You can now configure the Ring type weights for when you identify a Ring.
   - Mini-boss mobs such as the Elder Guardian, Evoker, and Ravager will now always drop
       an unidentified item.
   // - Now drop for boss mobs, and will always drop 7 unidentified items by default.
   - TODO: doesn't drop more than once! Need to use something other than LootItemRandomChanceCondition.
CHANGED:
  Increased the chance to drop an Unidentified Ring when killing enemy mobs.
  The Dimensional Anchor is now registered as a Curios Charm, if you
    have the Curios mod installed.
  The Energized Power Core and Nullified Power Core are now crafted using the
    Circuit Fabricator from ADDSynth Energy.
  Changed Energy Storage Container's default maximum energy from 1,000,000 to 200,000.
    - This is mainly because I plan to add different types of batteries in the future.
  Some Machine State status messages are now color-coded.
  Removed any top-level sections in Config files.
   - This will cause most of your config files to be reset. Sorry!
FIXED:
  Fixed Unidentified Chainmail armor dropping as often as Gold armor.
  Optimized Lasers:
    - Doesn't use any TileEntities at all, so there should be much less lag.
    - Lasers stay in-world if you log out and get back in again.
    - Lasers beams continue moving even if the Laser is removed.
  Fixed Laser machines counting adjacent lasers even though they weren't attached
    or the proper laser type.
  Fixed de_de.json language files. Fixed "Lasers" and "Auto Shutoff" not being translated.
    See: https://github.com/ADDSynth/Overpowered-Forge-1.14/commit/5f4418eadb862447e4b58be2b637d0f230d717f4
  Fixed Energy Suspension Bridge maximum length was actually 1 less than what is set
    in the configuration.
  Fix not loading MachineValues config correctly. Yay! Sorry about that!
  Fix the Fusion Energy advancement was never being awarded to players. God Dammit.
REMOVED: