@@ -69,21 +69,20 @@ public final class CircuitFabricatorGui extends GuiEnergyBase<TileCircuitFabrica
     item_scrollbar.setResponder(this::onItemSelected);
     addButton(item_scrollbar);
     
-    // setup data   (I know there's a better way to do this, but it's like this for now.)
+    // setup data
     tile.updateGui(); // update displayed recipe, in case player opens another Circuit Fabricator
-    updateSelectedItem(tile.getRecipeOutput());
+    final ItemStack output = tile.getRecipeOutput();
+    selected_item = StringUtil.translate(output.getTranslationKey());
+    item_scrollbar.setSelected(output, false);
   }
 
   private final void onItemSelected(final ItemStack item, final int index){
-    @SuppressWarnings("null")
-    final String item_name = item.getItem().getRegistryName().toString();
-    NetworkHandler.INSTANCE.sendToServer(new ChangeCircuitFabricatorRecipe(tile.getPos(), item_name));
-    selected_item = StringUtil.translate(item.getTranslationKey());
-  }
-
-  private final void updateSelectedItem(final ItemStack output){
-    selected_item = StringUtil.translate(output.getTranslationKey());
-    item_scrollbar.setSelected(output);
+    if(item != null){
+      @SuppressWarnings("null")
+      final String item_name = item.getItem().getRegistryName().toString();
+      NetworkHandler.INSTANCE.sendToServer(new ChangeCircuitFabricatorRecipe(tile.getPos(), item_name));
+      selected_item = StringUtil.translate(item.getTranslationKey());
+    }
   }
 
   /** Called when the player changes the selected recipe on the server side.
